# PEMesh.2

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-ubuntu.yml  macos-build.yml  windows-build.yml
data/dataset/ex1/: 000_0.000000.off  002_0.094737.off  004_0.189474.off  005_0.236842.off  006_0.284211.off  007_0.331579.off  010_0.473684.off  014_0.663158.off  015_0.710526.off  019_0.900000.off
data/dataset/exercise_1_2/: 012_0.568421.off  018_0.852631.off
data/dataset/exercise_3a/: mesh00.off  mesh01.off  mesh03.off  mesh04.off  mesh05.off  mesh06.off
data/dataset/exercise_3b/: mesh01.off  mesh02.off  mesh03.off  mesh05.off  mesh06.off  mesh07.off  mesh08.off  mesh09.off  mesh10.off  mesh11.off  mesh12.off
data/dataset/poly/: 003_0.142105.off  008_0.378947.off  009_0.426316.off  011_0.521053.off  013_0.615789.off  016_0.757895.off  017_0.805263.off
data/dataset/poly_full/: 001_0.047368.off
data/dataset/quad/quad/: mesh1.off  mesh2.off  mesh3.off  mesh4.off
data/dataset/quad/quad_20/: mesh1.off  mesh2.off  mesh3.off  mesh4.off
data/dataset/quad/quad_40/: mesh1.off  mesh2.off  mesh3.off  mesh4.off
data/dataset/tri/tri/: mesh1.off  mesh3.off  mesh4.off
data/dataset/tri/tri_20/: mesh1.off  mesh2.off  mesh3.off  mesh4.off
data/dataset/tri/tri_40/: mesh1.off  mesh2.off  mesh3.off  mesh4.off
scripts/: build_metis.bat  build_metis.sh
solver/: VEM_2D_SOLVER
src/: CMakeLists.txt  PEMesh.pro  addpolygondialog.cpp  addpolygondialog.h  addpolygondialog.ui  customizedchartview.h  dataset.cpp  dataset.h  dataset_classes.h  datasetwidget.cpp  datasetwidget.h  datasetwidget.ui  docs.qrc  genericvtkwidget.cpp  genericvtkwidget.h  genericvtkwidget.ui  geometrygeometryscatterplotswidget.cpp  geometrygeometryscatterplotswidget.h  geometrygeometryscatterplotswidget.ui  geometryperformancescatterplotswidget.cpp  geometryperformancescatterplotswidget.h  geometryperformancescatterplotswidget.ui  images.qrc  licence_dialog.cpp  licence_dialog.h  licence_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meshfullmetricswidget.cpp  meshfullmetricswidget.h  meshfullmetricswidget.ui  meshmetricsgraphicwidget.cpp  meshmetricsgraphicwidget.h  meshmetricsgraphicwidget.ui  meshmetricswidget.cpp  meshmetricswidget.h  meshmetricswidget.ui  optimizedialog.cpp  (+15 more)
src/gui-opengl/: glcanvas.cpp  glcanvas.h  glcanvas_old.cpp  glcanvas_old.h
src/meshes/: abstract_vem_element.cpp  abstract_vem_element.h  mesh_metrics.cpp  mesh_metrics.h  mirroring.cpp  non_uniform_scaling_01.h  vem_elements.cpp  vem_elements.h
src/optimization/: GraphUtilities.hpp  MetisUtilities.cpp  MetisUtilities.hpp  extended_predicates.h  global_variables.h  hierarchy.cpp  hierarchy.h  mesh_agglomeration.cpp  mesh_agglomeration.h  mesh_check.cpp  mesh_check.h  metis_wrap.cpp  metis_wrap.h  sum_polys.cpp  sum_polys.h
